kubernetes/apps/ploeg/unfold/app/former-host.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unfold-former-host
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  hostnames:
    - vloer.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: unfold.${SECRET_DOMAIN}
            statusCode: 301
