kubernetes/apps/ploeg/unfold/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unfold
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
    monitoring.webgrip.io/synthetic-check: blackbox-unfold
spec:
  hostnames:
    - unfold.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: unfold
          port: 4080
