kubernetes/apps/ploeg/unfold/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: unfold-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: unfold
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: unfold-workspaces
      ports:
        - protocol: TCP
          port: 4080
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: unfold-api
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: unfold
  egress:
    - toEntities:
        - kube-apiserver
